<resources>
    <string name="app_name">Словарь Баранова</string>
    <string name="action_settings">Настройки</string>
    <string name="search_title">Искать в словаре Баранова</string>
    <string name="search_hint">Арабское или русское слово</string>
    <string name="rbSearchLikeText">Искать любое вхождение</string>
    <string name="rbSearchExactText">Искать только точное совпадение</string>
    <string name="bClearSearchHistoryText">Удалить историю поиска</string>
    <string name="clear_search_history_dialog_title">Удалить историю поиска?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="you_entered_only_one_character">Вы ввели всего 1 символ</string>
    <string name="the_search_will_be_made_in_exact_mode">Поиск будет произведен в режиме \"точное совпадение\"</string>
    <string name="details_activity_title">Корень</string>
    <string name="results">Результатов: %d</string>
    <string name="alphabet">Алфавит</string>
    <string name="about">О программе</string>
    <string name="nr_title">№</string>
    <string name="nv_title">Числовое значение</string>
    <string name="writing">Написание</string>
    <string name="in_the_beginning">В начале</string>
    <string name="in_the_middle">В середине</string>
    <string name="in_the_end">В конце</string>
    <string name="copy_translation">Копировать перевод</string>
    <string name="copy_whole_article">Копировать всю карточку</string>
    <string name="translation_copied">Перевод скопирован в буфер обмена</string>
    <string name="whole_article_copied">Карточка скопирована в буфер обмена</string>
    <string name="app_name_long">Арабско - русский словарь Баранова</string>
    <string name="version">Версия %s</string>
    <string name="copyright">© 2015 Иван Работяга</string>
    <string name="description">В программе используется цифровая копия словаря Х. К. Баранова,
        созданная Маратом Сайфутдиновым, исправленная и дополненная</string>
    <string name="description2">Программа является частью проекта по созданию современного,
        открытого и дополняемого словаря</string>
    <string name="site_url">https://desolate-island-2917.herokuapp.com/about</string>
    <string name="leave_a_comment">Оставить отзыв</string>
    <string name="go_to_site">Перейти на сайт</string>
    <string name="unable_to_open_market">Не удается открыть Google Play. Установите Google Play или бразуер.</string>
    <string name="unable_to_open_site">Не удается открыть ссылку. Установите бразуер</string>
    <string name="logo">Логотип</string>
    <string name="backButton">Назад</string>
    <string name="forwardButton">Вперед</string>
</resources>
