<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/action_alphabet"
        android:title="@string/alphabet"
        android:orderInCategory="80"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="90"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
